--- a/style.css
+++ b/style.css
@@ -4,11 +4,13 @@
     box-sizing: border-box;
 }
 body{
- background-color: #FF3CAC;
-background-image: linear-gradient(225deg, #35333781 0%, #784BA0 50%, #258fe0 100%);
-font-family:sans-serif;
 
-background-repeat: no-repeat;
+background-image: linear-gradient(270deg, #11d020 0%, #312fc2 100%);
+background-repeat:repeat-x
+background-size: cover;
+font-family: 'Roboto Mono', monospace;
+
+
 }
 header h1{
     color: #fff;
@@ -37,15 +39,15 @@ form input{
     outline: none;
 }
 form button{
-    color: #fff;
-    background-color: #340436;
+    color: rgb(215, 151, 31);
+    background-color:#29569A;
     cursor: pointer;
     transition: all .3s ease;
     
 }
 form button:hover{
-    background-color: #fff;
-    color: #340436 ;
+    background-color:  #312fc2 ;;
+    color: #fff ;
 }
 /* select */
 .select{
@@ -97,6 +99,7 @@ justify-content: center;
     background-color:#fff;
     color: #000;
     font-size: 1.5rem;
+    font-family: 'Roboto Slab', serif;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -110,7 +113,7 @@ padding: 0 0.5rem;
 
 /* ekle çıkar butonları */
 .ortak{
-    background-color: #960303;
+    background-color: #6e3da2;
     color: #fff;
     padding: 1rem;
     cursor: pointer;
@@ -119,7 +122,7 @@ padding: 0 0.5rem;
    
 }
 .complete-btn{
-    background-color: #0b8793;
+    background-color: #a7a012;
 }
 .icn{
     font-size: 1.5rem;
